# immo-dvf-prediction

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: streamlit_app.py
src/: __init__.py
src/agents/: __init__.py  parser.py  scraper.py
src/data/: __init__.py  clean.py  download.py  features.py  join.py  load.py  split.py
src/models/: __init__.py  evaluate.py  predict.py  train.py
src/utils/: __init__.py  config.py  logging.py
src/visualization/: __init__.py  plots.py
